update code about auth and update about swagger
